--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "concurrently \"nodemon server/server.js\" \"NODE_ENV=development webpack serve --open\"",
     "start": "NODE_ENV=production node server/server.js",
     "build": "NODE_ENV=production webpack",
-    "gulp-prod": "node_modules/.bin/gulp prod",
-    "gulp-dev": "node_modules/.bin/gulp dev"
+    "gulp-prod": "gulp prod",
+    "gulp-dev": "gulp dev"
   },
   "nodemonConfig": {
     "ignore": [
@@ -20,6 +20,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.22.6",
+    "@babel/eslint-parser": "^7.22.6",
+    "@babel/plugin-transform-runtime": "^7.22.6",
+    "@babel/runtime": "^7.22.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "gulp": "^4.0.2",
@@ -31,7 +35,8 @@
     "pq": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.14.0"
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -40,7 +45,12 @@
     "babel-loader": "^9.1.2",
     "concurrently": "^8.2.0",
     "css-loader": "^6.8.1",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.2",
     "html-webpack-plugin": "^5.5.3",
+    "path": "^0.12.7",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
