--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pq": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.14.0"
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
